--- a/views/index.html
+++ b/views/index.html
@@ -10,9 +10,9 @@
 <body>
 	<div class = "container">
 	<div class = "banner">
-		<img class="newappIcon" src="images/newapp-icon.png">
+		<img class="newappIcon" src="images/Dakota Logo.png">
 		<p class = "appTitle">
-			Favorites Organizer powered by Cloudant
+			Sample Web Page From Bluemix for Dakota County
 		</p>
 	</div>
 
