--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Favorites Organizer powered by Cloudant</title>
+	<title>Dakota Sample App</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no"/>
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -10,7 +10,7 @@
 <body>
 	<div class = "container">
 	<div class = "banner">
-		<img class="newappIcon" src="images/Dakota Logo.png">
+		<img class="newappIcon" src="images/Dakota-Logo.png">
 		<p class = "appTitle">
 			Sample Web Page From Bluemix for Dakota County
 		</p>
