This is a changed we made

--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 	<div class = "banner">
 		<img class="newappIcon" src="images/Dakota-Logo.png">
 		<p class = "appTitle">
-			Sample Web Page From Bluemix for Dakota County
+			Sample Web Page From Bluemix for Dakota County Updated in January
 		</p>
 	</div>
 
